# barsh

./: Cargo.toml  LICENSE  README.md
data/: promt.txt
src/: app.rs  main.rs  prompt.rs  ui.rs
src/ais/: client.rs  mod.rs  prompt.rs
src/app/: mod.rs  ui.rs
src/utils/: mod.rs
