[package]
name = "barsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
openai-api-rs = "0.1.6"
shlex = "1.1.0"
proceed = "0.1.0"
data = "0.0.0"
crossterm = "0.26.1"
tui = "0.19.0"
