[package]
name = "barsh"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For early dev.

[dependencies]
tokio = { version = "1", features = ["full"] }
shlex = "1.3.0"
proceed = "0.1.0"
crossterm = "0.28.1"
tui = "0.19.0"
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
anyhow = "1.0.86"
async-openai = "0.23.4"
sysinfo = "0.31.2"
futures = "0.3.30"


